fixed a minor style issue on mobile

--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -564,6 +564,9 @@ a:hover {
     width: 90%;
     max-width: 90%;
   }
+  .paper-panel-content p {
+    min-height: 6em;
+  }
 }
 
 
